[gd_scene load_steps=4 format=3 uid="uid://caw3udkdenyww"]

[ext_resource type="PackedScene" uid="uid://bse4eejmfs6pj" path="res://Assets_and_textures/Weapons/Bullet_762/762_bullet_scene.gltf" id="1_fy31n"]
[ext_resource type="Script" path="res://Characters/Enemy_Resources/dumb_grunt/Bullet/762_round.gd" id="2_nseh0"]

[sub_resource type="BoxShape3D" id="BoxShape3D_spvvm"]
size = Vector3(1.3, 0.4, 0.4)

[node name="762_Round" instance=ExtResource("1_fy31n")]
transform = Transform3D(4.37114e-08, -3.82137e-15, 1, -8.74228e-08, -1, 0, 1, -8.74228e-08, -4.37114e-08, 0, 0, 0)
script = ExtResource("2_nseh0")

[node name="Sketchfab_model" parent="." index="0"]
transform = Transform3D(0.003, 0, 0, 0, -1.31134e-10, 0.003, 0, -0.003, -1.31134e-10, 0, 0, 0)

[node name="bullet_area" type="Area3D" parent="." index="1"]
transform = Transform3D(0.07, 0, 0, 0, 0.07, 0, 0, 0, 0.07, 0, 0.0309453, 0.00297531)
collision_layer = 9
collision_mask = 9

[node name="CollisionShape3D" type="CollisionShape3D" parent="bullet_area" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0698536, -0.0931167, 0)
shape = SubResource("BoxShape3D_spvvm")

[node name="Timer" type="Timer" parent="." index="2"]
wait_time = 2.0

[connection signal="area_entered" from="bullet_area" to="." method="_on_bullet_area_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
